docs/css/index.css
/* ... */
.header-text .title {
  margin-top: var(--space-2xs);
  text-align: center;
}

/* Theme switcher styles */
.theme-switcher {
  position: absolute;
  top: var(--space-3xs);
  right: var(--space-2xs);
  display: flex;
  flex-direction: row;
  z-index: 2000;
  pointer-events: all;
  user-select: none;
  gap: var(--space-2xs);
  transition: opacity 0.3s ease-in-out;
  box-shadow: var(--shadow);
  border-radius: var(--btn-border-radius);
}

.theme-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  z-index: 2500;
  user-select: none;
  opacity: 1;
  background: transparent;
  color: var(--text-color);
  transition: opacity 0.3s ease-in-out;
  pointer-events: all;
  box-shadow: var(--shadow);
}

.theme-button.active {
  display: none;
}

.theme-button:not(.active) {
  display: block;
  opacity: 1;
  pointer-events: all;
  transition: opacity 0.3s ease-in-out;
  background: transparent;
  color: var(--text-color);
  border: none;
  border-radius: var(--btn-border-radius);
  user-select: none;
  cursor: pointer;
  box-shadow: var(--shadow);
}

.theme-button input[type="radio"] {
  display: none;
}

.theme-button svg {
  width: var(--space-m);
  height: var(--space-m);
  color: var(--text-color);
  opacity: 1;
  display: inline-block;
  transition: transform 0.1s, color 0.3s, background-color 0.3s;
  /* Add this line */
  user-select: none;
  pointer-events: none;
  /* Prevents SVG from capturing pointer events */
  box-shadow: var(--shadow);
}

.theme-button:hover svg {
  transform: scale(0.6) rotate(90deg);
  transition: transform 0.1s, color 0.3s, background-color 0.3s;
  color: var(--text-span);
  background: none;
}

/*-------------curvature-----------------*/

.curve-container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: var(--space-5xl);
  margin-block: var(--space-3xl);
  padding-inline: var(--padding-inline);
  margin-inline: auto;
}

.content {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-inline: auto;
  padding: 0 var(--space-m);
}

.content div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}

@keyframes show-hide {
  0%,
  100% {
    opacity: 0;
    transform: scale(0.8);
  }
  20%,
  100% {
    opacity: 1;
    transform: scale(1);
  }
}

.content div span {
  width: 8.5vmin;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  color: var(--text-color);
  font-size: var(--step-0);
  text-shadow: 0 0 5px var(--text-color);
}

.content-1 {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  margin-inline: auto;
}

.content-1 div {
  position: absolute;
  display: flex;
  animation: show-hide var(--sp) ease 0s infinite;
  mix-blend-mode: plus-lighter;
}

@keyframes show-hide {
  0%,
  100% {
    opacity: 0;
    transform: scale(0.4);
  }
  20%,
  80% {
    opacity: 1;
    transform: scale(1.4);
  }
}

.content-1 div span {
  width: 10vmin;
  position: relative;
  text-align: center;
  box-sizing: border-box;
  color: var(--text-color);
  font-size: var(--step-0);
  text-shadow: 0 0 5px var(--text-color);
}


.up:before,
.down:before {
  width: 80%;
  height: 0.1vmin;
  background: radial-gradient(ellipse at 50% 50%, var(--text-color), #ffffff00 70%);
  content: "";
  position: absolute;
  border-radius: 100%;
  filter: blur(2px);
  left: 10%;
  top: 49%;
  box-shadow: 0 0 100px 0 var(--text-color);
  animation: shadow var(--sp) ease 0s infinite;
}

.down:before {
  /* Small focused shadow */
  width: 1vmin;
  height: 0.5vmin;
  filter: blur(3px);
  left: calc(50% - 0.5vmin);
  top: 45%;
  box-shadow: 0 0 100px 0 var(--text-color);
}

@keyframes shadow {
  0%,
  10%,
  90%,
  100% {
    opacity: 0;
  }
  45%,
  55% {
    opacity: 0.25;
    height: 0.25vmin;
  }
}

.up span,
.down span {
  animation-duration: var(--sp);
  animation-timing-function: ease;
  animation-delay: 0s;
  animation-iteration-count: infinite;
}

/*up*/
.up-2-8 {
  animation-name: go-up-2-8;
}

.up-3-7 {
  animation-name: go-up-3-7;
}

.up-4-6 {
  animation-name: go-up-4-6;
}

.up-5 {
  animation-name: go-up-5;
}

/*down*/
.down-2-8 {
  animation-name: go-down-2-8;
}

.down-3-7 {
  animation-name: go-down-3-7;
}

.down-4-6 {
  animation-name: go-down-4-6;
}

.down-5 {
  animation-name: go-down-5;
}

@keyframes go-up-2-8 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -0.6vmin;
  }
}

@keyframes go-up-3-7 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -1.2vmin;
  }
}

@keyframes go-up-4-6 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -1.8vmin;
  }
}

@keyframes go-up-5 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: -2.4vmin;
  }
}

@keyframes go-down-2-8 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 0.6vmin;
  }
}

@keyframes go-down-3-7 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 1.2vmin;
  }
}

@keyframes go-down-4-6 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 1.8vmin;
  }
}

@keyframes go-down-5 {
  0%,
  10%,
  90%,
  100% {
    top: 0;
  }
  40%,
  60% {
    top: 2.4vmin;
  }
}

.text-container {
  color: var(--text-color);
  margin-top: var(--space-2xl);
  word-spacing: var(--space-xs);
  user-select: none;
  overflow: hidden;
  text-align: center;
  z-index: 1000;
}

.text-with-animation {
  font-family: var(--font-primary), sans-serif;
  margin-block: var(--space-2xs);
  font-size: var(--step-4);
  font-style: italic;
  /* Makes text slanted */
}

.text-with-animation-1,
.text-with-animation-2 {
  font-family: var(--font-secondary), sans-serif;
  font-style: normal;
  font-weight: normal;
  text-align: center;
  font-size: var(--step-2);
  padding-block: var(--space-3xs);
}
/* ... */

